tip update bottom and top position

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -512,7 +512,7 @@
 }
 
 .tip.ve-tip-top {
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -100%);
   &::before {
     top: 100%;
     .Triangle(left, right, top)
@@ -520,7 +520,7 @@
 }
 
 .ve-tip-bottom {
-  transform: translate(-50%, 100%);
+  transform: translate(-50%, 0);
   &::before {
     top: -6px;
     .Triangle(left, right, bottom)
