--- a/src/style/index.less
+++ b/src/style/index.less
@@ -14,12 +14,17 @@
 
 @color-dom: rgb(230, 236, 241);
 @info: #909399;
+@primary: #0d85ff;
 @inputColor: #606266;
 @error: #f56c6c;
 @success: #67c23a;
 @warning: #e6a23c;
 @error: #f56c6c;
 @info: #909399;
+
+* {
+  box-sizing: border-box;
+}
 
 /* input.vue */
 .input {
@@ -215,39 +220,64 @@
 .v-easy-button {
   position: relative;
   display: inline-block;
-  button {
-    display: inline-block;
-    line-height: 1;
-    white-space: nowrap;
-    cursor: pointer;
-    background: #fff;
-    border: 1px solid #dcdfe6;
-    color: #606266;
-    text-align: center;
-    box-sizing: border-box;
-    outline: 0;
-    margin: 0;
-    transition: .1s;
-    font-weight: 500;
-    padding: 12px 20px;
-    font-size: 14px;
-    border-radius: 4px;
-    i {
-      margin-right: 10px;
-    }
-  }
+  line-height: 1;
+  white-space: nowrap;
+  cursor: pointer;
+  background: #fff;
+  border: 1px solid #dcdfe6;
+  color: #606266;
+  text-align: center;
+  box-sizing: border-box;
+  outline: 0;
+  margin: 0;
+  transition: .1s;
+  font-weight: 500;
+  padding: 12px 20px;
+  font-size: 14px;
+  border-radius: 4px;
   overflow: hidden;
+  i {
+    margin-right: 10px;
+  }
+  .button-text {
+    position: relative;
+    z-index: 1;
+    transition: color .2s linear;
+  }
   .button-mask {
     position: absolute;
+    left: 0;
+    top: 0;
+    background-color: @info;
+  }
+  .button-mask-default {
     width: 100%;
     height: 100%;
     border-radius: 4px;
-    background-color: @info;
     opacity: .3;
-    left: 0;
-    top: 0;
     transition: left .3s;
     cursor: pointer;
+  }
+  .button-mask:not(.button-mask-default) {
+    width: 0;
+    height: 0;
+    border-radius: 50%;
+  }
+  .button-mask-primary {
+    background: #0d85ff;
+    border-color: #0d85ff;
+  }
+  .button-mask-success {
+    background-color: #85ce61;
+    border-color: #85ce61;
+  }
+  .button-mask-warning {
+    background-color: #ebb563;
+    border-color: #ebb563;
+  }
+  .button-mask-error {
+    background-color: #f78989;
+    border-color: #f78989;
   }
   .is-rotate {
     animation: rotate 1s linear infinite;
@@ -255,111 +285,125 @@
 }
 
 .button-is-circle {
-  button {
-    border-radius: 50%;
-    padding: 12px;
-    i {
-      margin: 0;
-    }
+  border-radius: 50%;
+  padding: 12px;
+  i {
+    margin: 0;
   }
   .button-mask {
     border-radius: 50%;
   }
 }
 
-.button-is-disabled button {
+.button-is-disabled {
   opacity: .4;
   cursor: not-allowed;
 }
 
-.button.button-is-plain button {
+.button.button-is-plain {
   background: none;
   border: 1px solid #eeeeee;
 }
 
-.button.button-is-plain.easy-button-primary button {
+.button.button-is-plain.easy-button-primary {
   color: @info;
   border: 1px solid #eeeeee;
 }
 
-.button.button-is-plain.easy-button-success button {
+.button.button-is-plain.easy-button-success {
   color: @success;
   border: 1px solid #eeeeee;
 }
 
-.button.button-is-plain.easy-button-warning button {
+.button.button-is-plain.easy-button-warning {
   color: @warning;
   border: 1px solid #eeeeee;
 }
 
-.button.button-is-plain.easy-button-error button {
+.button.button-is-plain.easy-button-error {
   color: @error;
   border: 1px solid #eeeeee;
 }
 
-.button.easy-button-primary:hover:not(.button-is-disabled) button, .button.easy-button-primary:not(.button-is-disabled) button:focus {
+.button.easy-button-primary:hover:not(.button-is-disabled):not(.button-is-mask), .button.easy-button-primary:not(.button-is-disabled):not(.button-is-mask):focus {
   color: #fff;
-  background: #0d85ff;
-  border-color: #0d85ff;
+  background: @primary;
+  border-color: @primary;
 }
 
-.button.easy-button-success:hover:not(.button-is-disabled) button, .button.easy-button-success:not(.button-is-disabled) button:focus {
+.button.easy-button-success:hover:not(.button-is-disabled):not(.button-is-mask), .button.easy-button-success:not(.button-is-disabled):not(.button-is-mask):focus {
   color: #fff;
   background-color: #85ce61;
   border-color: #85ce61;
 }
 
-.button.easy-button-warning:hover:not(.button-is-disabled) button, .button.easy-button-warning:not(.button-is-disabled) button:focus {
+.button.easy-button-warning:hover:not(.button-is-disabled):not(.button-is-mask), .button.easy-button-warning:not(.button-is-disabled):not(.button-is-mask):focus {
   color: #fff;
   background-color: #ebb563;
   border-color: #ebb563;
 }
 
-.button.easy-button-error:hover:not(.button-is-disabled) button, .button.easy-button-error:not(.button-is-disabled) button:focus {
+.button.easy-button-error:hover:not(.button-is-disabled):not(.button-is-mask), .button.easy-button-error:not(.button-is-disabled):not(.button-is-mask):focus {
   color: #fff;
   background-color: #f78989;
   border-color: #f78989;
 }
 
-.button:not(.button-is-disabled) button:focus, .button:hover:not(.button-is-disabled) button {
+.button:not(.button-is-disabled):not(.button-is-mask):focus, .button:hover:not(.button-is-disabled):not(.button-is-mask) {
   color: #409EFF;
   border-color: #c6e2ff;
   background-color: #ecf5ff;
 }
 
-.easy-button-primary button {
+.button-is-mask:hover:not(.button-is-disabled) .button-mask-text {
+  color: white;
+}
+
+.button-is-mask-primary {
+  border-color: #3a8ee6;
+}
+
+.button-is-mask-success {
+  border-color: @success;
+}
+
+.button-is-mask-warning {
+  border-color: @warning;
+}
+
+.button-is-mask-error {
+  border-color: @error;
+}
+
+.easy-button-primary {
   color: #fff;
   background-color: #409eff;
   border-color: #409eff;
 }
 
-.easy-button-success button {
+.easy-button-success {
   color: #fff;
   background-color: @success;
   border-color: @success;
 }
 
-.easy-button-warning button {
+.easy-button-warning {
   color: #fff;
   background-color: @warning;
   border-color: @warning;
 }
 
-.easy-button-error button {
+.easy-button-error {
   color: #fff;
   background-color: @error;
   border-color: @error;
-}
-
-.v-easy-button:focus, .v-easy-button:hover .button-mask {
-  left: 100%;
 }
 
 .button + .button {
   margin-left: 10px;
 }
 
-.button:active {
+.button:not(.button-is-disabled):not(.button-is-mask):active {
   color: #3a8ee6;
   border-color: #3a8ee6;
   outline: 0;
