use yarn and remove useless depend

--- a/src/theme-chalk/src/button.less
+++ b/src/theme-chalk/src/button.less
@@ -1,9 +1,5 @@
-@info: #909399;
-@primary: #0d85ff;
-@inputColor: #606266;
-@success: #67c23a;
-@warning: #e6a23c;
-@error: #f56c6c;
+@import "./mixins/_color.less";
+
 @keyframes rotate {
   100% {
     transform: rotate(360deg);
