--- a/src/theme-chalk/src/image-preview.less
+++ b/src/theme-chalk/src/image-preview.less
@@ -1,30 +1,4 @@
-@font-face {
-  font-family: 'FontAwesome';
-  src: url('./fonts/fontawesome-webfont.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-.fa {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.fa-4x {
-  font-size: 4em;
-}
-
-.fa-angle-left:before {
-  content: "\f104";
-}
-
-.fa-angle-right:before {
-  content: "\f105";
-}
+@import "./mixins/_font.less";
 
 .image-read-parent {
   cursor: zoom-in;
