--- a/src/theme-chalk/src/index.less
+++ b/src/theme-chalk/src/index.less
@@ -1,9 +1,9 @@
 @import "button";
-@import "ip";
+@import "input-ip";
 @import "loading";
 @import "message";
-@import "image";
-@import "plain";
-@import "subnet";
+@import "image-preview";
+@import "input-plain";
+@import "input-subnet";
 @import "switch";
-@import "tip";
+@import "tool-tip";
