--- a/src/theme-chalk/src/message.less
+++ b/src/theme-chalk/src/message.less
@@ -1,40 +1,6 @@
-@success: #67c23a;
-@warning: #e6a23c;
-@error: #f56c6c;
-@info: #909399;
-@font-face {
-  font-family: 'FontAwesome';
-  src: url('./fonts/fontawesome-webfont.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
+@import "./mixins/_color.less";
+@import "./mixins/_font.less";
 
-.fa {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-.fa-remove:before,
-.fa-close:before,
-.fa-times:before {
-  content: "\f00d";
-}
-.fa-thumbs-up:before {
-  content: "\f164";
-}
-.fa-hand-stop-o:before,
-.fa-hand-paper-o:before {
-  content: "\f256";
-}
-.fa-info-circle:before {
-  content: "\f05a";
-}
-.fa-thumbs-down:before {
-  content: "\f165";
-}
 .message {
   min-width: 340px;
   box-sizing: border-box;
