--- a/src/theme-chalk/src/_font.less
+++ b/src/theme-chalk/src/_font.less
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.ttf') format('truetype');
+  src: url('./fonts/fontawesome-webfont.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
