--- a/src/theme-chalk/src/input-plain.less
+++ b/src/theme-chalk/src/input-plain.less
@@ -1,5 +1,5 @@
-@import "./mixins/_color.less";
-@import "./mixins/_input.less";
+@import "./mixins/_color";
+@import "./mixins/_input";
 
 .input {
   .-input()
