--- a/src/theme-chalk/src/message.less
+++ b/src/theme-chalk/src/message.less
@@ -1,5 +1,5 @@
-@import "./mixins/_color.less";
-@import "./_font.less";
+@import "./mixins/_color";
+@import "./_font";
 
 .message {
   min-width: 340px;
