--- a/src/theme-chalk/src/tool-tip.less
+++ b/src/theme-chalk/src/tool-tip.less
@@ -1,4 +1,4 @@
-@tip-width: 6px;
+@tip-width: 3px;
 .Triangle(@w: left,@a: right,@c: top,@t:transparent,@q:transparent,@u:#333) {
   border-@{w}: 6px solid @t;
   border-@{a}: 6px solid @q;
@@ -50,7 +50,7 @@
 .ve-tip-left {
   transform: translate(-100%, -50%);
   &::before {
-    left: calc(100% + 8px);
+    left: calc(100% + 6px);
     top: 50%;
     transform: translateY(-50%);
     .Triangle(top, bottom, left)
@@ -60,7 +60,7 @@
 .ve-tip-right {
   transform: translate(6px, -50%);
   &::before {
-    left: 3px;
+    left: 0;
     top: 50%;
     transform: translateY(-50%);
     .Triangle(bottom, top, right)
