--- a/src/theme-chalk/src/button.less
+++ b/src/theme-chalk/src/button.less
@@ -32,6 +32,9 @@ button.v-easy-button {
     position: relative;
     z-index: 1;
   }
+  .button-mask-text {
+    transition: color .2s;
+  }
   .button-mask {
     position: absolute;
     left: 0;
