--- a/src/theme-chalk/src/mixins/_input.less
+++ b/src/theme-chalk/src/mixins/_input.less
@@ -2,13 +2,17 @@
 
 .-input() {
   color: @info;
-  height: 40px;
+  width: 180px;
+  display: inline-block;
   .inspection {
     color: #f56c6c;
     font-size: 12px;
     text-align: left;
     margin: 6px 0;
     transition: all 0.3s;
+  }
+  &::placeholder {
+    color: #c0c4cc;
   }
 }
 
