--- a/src/theme-chalk/src/mixins/_input.less
+++ b/src/theme-chalk/src/mixins/_input.less
@@ -1,9 +1,9 @@
 @import "_color.less";
 
-.-input() {
+.input {
   color: @info;
-  width: 180px;
   display: inline-block;
+  vertical-align: top;
   .inspection {
     color: #f56c6c;
     font-size: 12px;
