feat: add steps and add button loading status

--- a/src/theme-chalk/src/button.less
+++ b/src/theme-chalk/src/button.less
@@ -39,7 +39,7 @@ button.v-easy-button {
     position: absolute;
     left: 0;
     top: 0;
-    background-color: @info;
+    background-color: @info-leave0;
   }
   .button-mask-default {
     width: 100%;
@@ -71,7 +71,7 @@ button.v-easy-button {
     border-color: #f78989;
   }
   .is-rotate {
-    animation: rotate 1s linear infinite;
+    animation: rotate .6s linear infinite;
   }
 }
 
@@ -97,7 +97,7 @@ button.button.button-is-plain {
 }
 
 button.button.button-is-plain.easy-button-primary {
-  color: @info;
+  color: @info-leave0;
   border: 1px solid #eeeeee;
 }
 
