--- a/src/theme-chalk/src/index.less
+++ b/src/theme-chalk/src/index.less
@@ -7,3 +7,8 @@
 @import "input-subnet";
 @import "switch";
 @import "tool-tip";
+@import "steps";
+
+body, html {
+  font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
+}
