--- a/src/theme-chalk/src/input-plain.less
+++ b/src/theme-chalk/src/input-plain.less
@@ -45,7 +45,7 @@
       padding: 2px 10px;
       display: block;
       cursor: pointer;
-      border: 1px solid @borderColor1;
+      border: 1px solid @border-color-leave0;
       border-right: none;
       border-bottom: none;
       &:hover {
