--- a/src/theme-chalk/src/message.less
+++ b/src/theme-chalk/src/message.less
@@ -22,7 +22,7 @@
     padding: 0;
     font-size: 14px;
     line-height: 1;
-    color: @info;
+    color: @info-leave0;
   }
   .message-type {
     margin-right: 10px;
