--- a/src/theme-chalk/src/mixins/_color.less
+++ b/src/theme-chalk/src/mixins/_color.less
@@ -1,8 +1,13 @@
-@info: #909399;
+@info-leave0: #909399;
+@info-leave1: #606266;
+@info-leave2: #303133;
 @inputColor: #606266;
 @error: #f56c6c;
 @primary: #0d85ff;
 @success: #67c23a;
 @warning: #e6a23c;
 
-@borderColor1: #c0c4cc;
+@border-color-leave0: #c0c4cc;
+@border-color-leave1: #EBEEF5;
+@border-color-leave2: #E4E7ED;
+@border-color-leave3: #DCDFE6;
