--- a/src/theme-chalk/src/mixins/_input.less
+++ b/src/theme-chalk/src/mixins/_input.less
@@ -1,7 +1,7 @@
 @import "_color.less";
 
 .input {
-  color: @info;
+  color: @info-leave0;
   display: inline-block;
   vertical-align: top;
   .inspection {
