feat: add ve-icon component

--- a/src/theme-chalk/src/index.less
+++ b/src/theme-chalk/src/index.less
@@ -8,6 +8,7 @@
 @import "switch";
 @import "tool-tip";
 @import "steps";
+@import "icon";
 
 body, html {
   font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
