style: change class name

--- a/src/theme-chalk/src/tool-tip.less
+++ b/src/theme-chalk/src/tool-tip.less
@@ -12,7 +12,7 @@
   position: relative;
 }
 
-.tip {
+.v-easy-tip {
   position: absolute;
   color: white;
   background-color: #333;
@@ -34,7 +34,7 @@
   }
 }
 
-.tip.ve-tip-top {
+.v-easy-tip.ve-tip-top {
   transform: translate(-50%, -100%);
   &::before {
     top: 100%;
