--- a/src/theme-chalk/src/button.less
+++ b/src/theme-chalk/src/button.less
@@ -10,7 +10,7 @@
 button.v-easy-button {
   position: relative;
   display: inline-block;
-  line-height: 1.5;
+  line-height: 1;
   white-space: nowrap;
   cursor: pointer;
   background: #fff;
@@ -19,8 +19,7 @@ button.v-easy-button {
   text-align: center;
   box-sizing: border-box;
   touch-action: manipulation;
-  height: 32px;
-  padding: 0 15px;
+  padding: 8px 15px;
   outline: 0;
   margin: 0;
   font-weight: 500;
@@ -203,8 +202,7 @@ button.easy-button-error {
 }
 
 button.easy-button__small {
-  height: 24px;
-  padding: 0 7px;
+  padding: 6px 7px;
 }
 
 button.easy-button__default {
@@ -212,8 +210,7 @@ button.easy-button__default {
 }
 
 button.easy-button__large {
-  height: 40px;
-  padding: 0 15px;
+  padding: 11px 15px;
   font-size: 16px;
 }
 
