style: Button style

--- a/src/theme-chalk/src/button.less
+++ b/src/theme-chalk/src/button.less
@@ -81,6 +81,8 @@ button.button-is-circle {
   padding: 12px;
   i {
     margin: 0;
+    width: 14px;
+    height: 14px;
   }
   .button-mask {
     border-radius: 50%;
