style: Change Message icon

--- a/src/theme-chalk/src/message.less
+++ b/src/theme-chalk/src/message.less
@@ -26,6 +26,8 @@
   }
   .message-type {
     margin-right: 10px;
+    width: 16px;
+    height: 16px;
   }
   .easy_message_close {
     position: absolute;
@@ -34,6 +36,13 @@
   }
   .fa-times {
     cursor: pointer;
+  }
+}
+
+.easy-message-info {
+  color: @info-leave1;
+  .message-type, p {
+    color: @info-leave1;
   }
 }
 
