fix: Font icon is separated, fix the style after component is not found xxx.css

--- a/src/theme-chalk/src/index.less
+++ b/src/theme-chalk/src/index.less
@@ -1,7 +1,7 @@
 @import "base";
 @import "button";
 @import "input-ip";
-@import "loading";
+@import "skeleton";
 @import "message";
 @import "image-preview";
 @import "input-plain";
@@ -9,6 +9,7 @@
 @import "switch";
 @import "tool-tip";
 @import "steps";
+@import "step";
 @import "icon";
 
 body, html {
