--- a/src/theme-chalk/src/index.less
+++ b/src/theme-chalk/src/index.less
@@ -11,6 +11,7 @@
 @import "steps";
 @import "step";
 @import "icon";
+@import "color-picker";
 
 body, html {
   font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
