--- a/src/theme-chalk/src/mixins/_color.less
+++ b/src/theme-chalk/src/mixins/_color.less
@@ -7,6 +7,7 @@
 @success: #67c23a;
 @warning: #e6a23c;
 
+@border-color-black: #333333;
 @border-color-leave0: #c0c4cc;
 @border-color-leave1: #EBEEF5;
 @border-color-leave2: #E4E7ED;
