--- a/src/theme-chalk/src/color-picker.less
+++ b/src/theme-chalk/src/color-picker.less
@@ -36,6 +36,10 @@
 
 .v-color {
 
+  &-main {
+    margin-top: 6px;
+  }
+
   &-content {
     position: relative;
   }
@@ -59,6 +63,36 @@
     border-radius: 50%;
     border: 1px solid white;
     user-select: none;
+  }
+
+  &-top {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &-hue {
+    position: relative;
+    width: 12px;
+    margin-left: 6px;
+    align-items: stretch;
+    &__bar {
+      background: linear-gradient(180deg,red 0,#ff0 17%,#0f0 33%,#0ff 50%,#00f 67%,#f0f 83%,red);
+      height: 100%;
+    }
+    &__thumb {
+      position: absolute;
+      cursor: pointer;
+      box-sizing: border-box;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 4px;
+      border-radius: 1px;
+      background: #fff;
+      border: 1px solid #f0f0f0;
+      box-shadow: 0 0 2px rgba(0,0,0,.6);
+      z-index: 1;
+    }
   }
 
   &-bottom {
