feat: color-picker support tip command

--- a/src/theme-chalk/src/button.less
+++ b/src/theme-chalk/src/button.less
@@ -13,7 +13,7 @@ button.v-easy-button {
   white-space: nowrap;
   cursor: pointer;
   background: #fff;
-  border: 1px solid #dcdfe6;
+  border: 1px solid @border-color-leave1;
   color: #606266;
   text-align: center;
   box-sizing: border-box;
