--- a/src/theme-chalk/src/input-plain.less
+++ b/src/theme-chalk/src/input-plain.less
@@ -15,7 +15,7 @@
     min-width: 64px;
     min-height: 28px;
     width: calc(100% - 24px);
-    border: 1px solid #c0c4cc;
+    border: 1px solid @border-color-leave1;
     border-radius: 4px;
     transition: box-shadow .4s;
     box-sizing: content-box;
