style: support eslint rule

--- a/src/theme-chalk/src/color-picker.less
+++ b/src/theme-chalk/src/color-picker.less
@@ -33,6 +33,7 @@
       align-items: center;
       justify-content: center;
       height: 100%;
+      box-sizing: border-box;
       i {
         color: white;
       }
