test: basic test file and change component name

--- a/src/theme-chalk/src/index.less
+++ b/src/theme-chalk/src/index.less
@@ -4,7 +4,7 @@
 @import "skeleton";
 @import "message";
 @import "image-preview";
-@import "input-plain";
+@import "input";
 @import "input-subnet";
 @import "switch";
 @import "tool-tip";
